[tool.poetry]
name = "qaguru-python-6-19"
version = "0.1.0"
description = ""
authors = ["Aleksandra Kashina <Borland3711@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "7.4.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
